--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,11 +26,11 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'corretto
+          distribution: 'corretto'
       - name: Install Terraform in the machine
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.1.7
+          terraform_version: 1.5.2
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
