--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,6 +40,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: shadowJar
+          build-root-directory: backend
       - name: Initialize Terraform
         run: cd terraform && terraform init
       - name: Check format
